src/codegen/snapshots/simpl__codegen__compile__test__compile_if-2.snap
---
source: src/codegen/compile.rs
expression: compiled
---
#include "prelude.h"

int main (int argc, char** argv) {
    Bool _0 = (false) ? (true) : (false);
(_0) ? ((true) ? (1) : (0)) : ((true) ? (0) : (1));
    return 0;
}
