src/codegen/snapshots/simpl__codegen__compile__test__compile_lit-3.snap
---
source: src/codegen/compile.rs
expression: compiled
---
#include "prelude.h"

int main (int argc, char** argv) {
    true;
    return 0;
}
