src/codegen/snapshots/simpl__codegen__compile__test__compile_mk_closure.snap
---
source: src/codegen/compile.rs
expression: compiled
---
#include "prelude.h"
typedef struct {
    Int x;
} closure0;

closure0 mk_closure0(Int x) {
    return (closure0) {.x = x};
}

Int call_closure0(closure0 c) {
    return c.x;
}
int main (int argc, char** argv) {
    Int x = 5;
closure0 capture_x = mk_closure0(x);
call_closure();
    return 0;
}
